--- a/example.etrack.conf
+++ b/example.etrack.conf
@@ -1,5 +1,10 @@
 ;;; example etrack configuration -*- scheme -*-
 
+;; This is a path to the directory where the cluster keeps
+;; its communication socket (typically named ‘.s.PGSQL.5432’).
+;; For now, it is optional, but in the future it will be mandatory.
+'(sockdir . "/PATH/TO/SOCKET/DIRECTORY")
+
 ;; The name of the configuration and the backend database.
 (name     . "Example Expenses")
 (database . etrack_example)
